--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -5,6 +5,11 @@ on:
   issue_comment:
     types: created
   workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths-ignore: 
+      - '.github/workflows/**'
 jobs:
   deploy:
     runs-on: ubuntu-latest
