--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -22,5 +22,10 @@ jobs:
         run: npm run test
       - name: Build code
         run: npm run build
+      - name: Archive build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: dist
       - name: Deploy project
         run: echo "Deploying..."
